--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vueuse/core": "^10.9.0",
     "animejs": "^3.2.2",
+    "aos": "^2.3.4",
     "vue": "^3.4.15"
   },
   "devDependencies": {
